# egui-dashboard-duplicate-file-finder

./: .gitignore  Cargo.toml  README.md
dashboard/common/: Cargo.toml
dashboard/common/src/: lib.rs
dashboard/gui/: Cargo.toml
dashboard/gui/src/: lib.rs
dashboard/gui/src/app/: mod.rs  state.rs
dashboard/gui/src/components/: about.rs  debug.rs  duplicate.rs  duplicates_table.rs  mod.rs  notifications.rs  settings.rs
dashboard/gui/src/components/basic/: button_group.rs  display_string.rs  file_utils.rs  font.rs  lofty_utils.rs  mod.rs  string_utils.rs  tabbar.rs  tabs.rs
dashboard/gui/src/scanner/: font.rs  mediatype.rs  messenger.rs  mod.rs  scanner.rs
