[package]
name = "dashboard_gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
dashboard_common.workspace = true
#eframe = { version = "0.28", default-features = false, features = [
#    "glow",
#    "default_fonts",
#] }

eframe = "0.28"
egui_extras = "0.28"
env_logger = "0.11"
egui-aesthetix-lj = { version = "0.2", features = ["all_themes"] }
#egui-aesthetix = { path = "../../../egui-aesthetix", features = ["all_themes"] }
#egui-data-table = { path = "../../../egui-data-table" }
egui-file-dialog = "0.6"
egui-modal = "0.4.0"
walkdir = "2"
utf8_slice = "1.0"

[[bin]]
name = "dashboard_gui"
path = "src/bin/main.rs"
